--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SaitMediator</string>
+    <string name="splash_logo">splash logo</string>
+    <string name="sait_official">SAIT official</string>
 </resources>
